--- a/.gitignore
+++ b/.gitignore
@@ -11,10 +11,13 @@
 # Generated files
 bin/
 gen/
+.idea/
+*.iml
 
 # Gradle files
 .gradle/
 build/
+/*/build/
 
 # Local configuration file (sdk path, etc)
 local.properties
@@ -25,8 +28,3 @@ proguard/
 # Log Files
 *.log
 
-# Android Studio Navigation editor temp files
-.navigation/
-
-# Android Studio captures folder
-captures/
