Added support library to travis build script. Used some material resources in sample. Started work on sample.

--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -40,8 +40,6 @@ dependencies {
     compile deps.support_v7
     compile deps.support_design
 
+    compile project(':library')
 
-    // Test
-
-    testCompile 'junit:junit:4.12'
 }
