--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ android:
     - platform-tools
     - build-tools-23.0.2
     - android-23
+    - extra-android-support
+    - extra-android-m2repository
 
 script: ./gradlew clean assembleDebug testDebug
 
