Typography sample which toggles between dark text on light background and light text on dark background with a FAB. Added up buttons to the sample activities. Fixed the colours being reset after coming back to root page.

--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -22,6 +22,7 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+        vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         release {
@@ -39,6 +40,7 @@ dependencies {
 
     compile deps.support_v7
     compile deps.support_design
+    compile deps.support_vector_drawable
 
     compile project(':library')
 
