--- a/build.gradle
+++ b/build.gradle
@@ -66,6 +66,7 @@ ext.deps = [
 
         support_v7: 'com.android.support:appcompat-v7:23.2.1',
         support_design: 'com.android.support:design:23.2.1',
+        support_vector_drawable: 'com.android.support:support-vector-drawable:23.2.1',
 
         // Test
 
