--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -13,6 +13,8 @@
 <manifest package="com.github.andrewlord1990.materialandroidsample"
           xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -61,6 +63,15 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".components.ComponentsSampleActivity"/>
         </activity>
+
+        <activity
+            android:name=".components.grids.GridsSampleActivity"
+            android:parentActivityName=".components.ComponentsSampleActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".components.ComponentsSampleActivity"/>
+        </activity>
+
 
     </application>
 
