Added a PasswordEditText view which implements the Material spec for a password view (with a visibility toggle). It has custom attributes to switch between a toggle that changes opacity, a toggle that switches to have a cross through it, being able to tint the toggle, providing custom drawables for the toggle. The view properly handles RTL, can be created and customised programmatically or through XML and samples have been added to show its use.

--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
 <manifest package="com.github.andrewlord1990.materialandroidsample"
           xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
@@ -74,6 +74,14 @@
 
         <activity
             android:name=".components.TextFieldsSampleActivity"
+            android:parentActivityName=".components.ComponentsSampleActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".components.ComponentsSampleActivity"/>
+        </activity>
+
+        <activity
+            android:name=".components.PasswordFieldsSampleActivity"
             android:parentActivityName=".components.ComponentsSampleActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
