--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.0.0-beta7'
+        classpath 'com.android.tools.build:gradle:2.0.0-rc1'
         classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.0.1x'
         classpath 'com.novoda:bintray-release:0.3.4'
     }
