--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -13,13 +13,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    compileSdkVersion rootProject.ext.compileSdk
+    buildToolsVersion "24.0.1"
 
     defaultConfig {
         applicationId "com.github.andrewlord1990.materialandroidsample"
-        minSdkVersion 7
-        targetSdkVersion 23
+        minSdkVersion rootProject.ext.minSdk
+        targetSdkVersion rootProject.ext.targetSdk
         versionCode 1
         versionName "1.0"
         vectorDrawables.useSupportLibrary = true
@@ -34,15 +34,14 @@ android {
 
 dependencies {
 
-    // App
+    compile fileTree(dir: 'libs', include: ['*.jar'])
 
-    compile deps.libs
+    compile 'com.android.support:support-v4:24.1.1'
+    compile 'com.android.support:appcompat-v7:24.1.1'
+    compile 'com.android.support:design:24.1.1'
+    compile 'com.android.support:support-vector-drawable:24.1.1'
 
-    compile deps.support_v7
-    compile deps.support_design
-    compile deps.support_vector_drawable
-
-    compile deps.picasso
+    compile 'com.squareup.picasso:picasso:2.5.2'
 
     compile project(':library')
 
