--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -16,10 +16,9 @@
   <uses-permission android:name="android.permission.INTERNET"/>
 
   <application
-      android:allowBackup="true"
+      android:allowBackup="false"
       android:icon="@mipmap/ic_launcher"
       android:label="@string/app_name"
-      android:supportsRtl="true"
       android:theme="@style/AppTheme.NoActionBar">
 
     <activity
