--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,12 @@ android:
   components:
     - tools
     - platform-tools
-    - build-tools-23.0.2
-    - android-23
+    - build-tools-24.0.1
+    - android-24
     - extra-android-support
     - extra-android-m2repository
 
-script: ./gradlew clean assembleDebug testDebug
+script: ./gradlew clean build check
 
 branches:
   only:
