--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ android:
     - extra-android-support
     - extra-android-m2repository
 
-script: ./gradlew build
+script: ./gradlew clean build check
 
 branches:
   only:
