--- a/quality-checks.gradle
+++ b/quality-checks.gradle
@@ -29,7 +29,7 @@ subprojects { project ->
     toolVersion '3.0.1'
   }
 
-  task findbugs(type: FindBugs) {
+  task findbugs(type: FindBugs, dependsOn: 'assemble') {
     group "Verification"
 
     excludeFilter = rootProject.file('config/findbugs/findbugs-filter.xml')
