--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -12,12 +12,13 @@
   ~
   ~  Unless required by applicable law or agreed to in writing, software distributed under the License is distributed
   ~  on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  ~
   ~  See the License for the specific language governing permissions and limitations under the License.
   -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          xmlns:tools="http://schemas.android.com/tools"
-          package="com.github.andrewlord1990.materialandroidsample">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.github.andrewlord1990.materialandroidsample">
 
   <uses-permission android:name="android.permission.INTERNET"/>
 
@@ -25,7 +26,8 @@
       android:allowBackup="false"
       android:icon="@mipmap/ic_launcher"
       android:label="@string/app_name"
-      android:theme="@style/AppTheme.NoActionBar">
+      android:theme="@style/AppTheme.NoActionBar"
+      tools:ignore="GoogleAppIndexingWarning">
 
     <activity
         android:name=".SampleActivity"
