--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ buildscript {
     jcenter()
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:2.1.3'
+    classpath 'com.android.tools.build:gradle:2.2.2'
     classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.0.1x'
     classpath 'com.novoda:bintray-release:0.3.4'
   }
@@ -42,9 +42,11 @@ ext {
   versionMinor = 4
   versionPatch = 0
 
-  targetSdk = 24
-  compileSdk = 24
+  targetSdk = 25
+  compileSdk = 25
   minSdk = 9
+
+  buildToolsVersion = '25.0.0'
 
   sourceCompatibilityVersion = JavaVersion.VERSION_1_7
   targetCompatibilityVersion = JavaVersion.VERSION_1_7
